--- a/index.html
+++ b/index.html
@@ -4,31 +4,21 @@
         <meta charset="UTF-8">
         <title>Medico – Chronic Health Companion App</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            body {
-                font-family: Arial, Helvetica, sans-serif;
-                line-height: 1.6;
-                margin: 40px;
-                max-width: 900px;
-            }
-            h1, h2 {
-                margin-top: 40px;
-            }
-            hr {
-                margin: 30px 0;
-            }
-            ul {
-                margin-left: 20px;
-            }
-        </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Medico – Chronic Health Companion App</h1>
-        <p><strong>SOEN 357 – UI/UX Design of a Health Companion App</strong></p>
+        <main class="container">
+            <header class="article-header">
+                <div class="header-meta">SOEN 357 – UI/UX Design</div>
+                <h1>Medico – Chronic Health Companion App</h1>
+                <div class="byline">A concise case study outlining research, wireframes and final design.</div>
+            </header>
+            <p><strong>SOEN 357 – UI/UX Design of a Health Companion App</strong></p>
 
         <hr>
 
-        <h2>1. Introduction</h2>
+            <section>
+                <h2>1. Introduction</h2>
         <p>
             The purpose of Medico is to support individuals with chronic conditions that require regular medication intake and recurring medical appointments, such as diabetes, asthma, cardiovascular conditions, or long-term mental health treatment.
         </p>
@@ -42,9 +32,12 @@
             Often, people enjoy gamifying their daily tasks, and when something feels too serious or rigid, they may avoid it altogether. In the context of health, this avoidance can lead to demotivation and eventually to users abandoning the app. Medico aims to deliver real and useful help in a fun and encouraging manner, motivating users rather than making them feel like they are completing yet another boring or stressful task.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>2. Problem Statement</h2>
+            <section>
+                <h2>2. Problem Statement</h2>
         <p>
             Medico aims to support users in remembering their medications and managing their health routines. Managing multiple medications can easily become confusing and discouraging, which may lead users to stop keeping track altogether.
         </p>
@@ -52,9 +45,12 @@
             In addition, many existing health applications lack a human and encouraging tone, which can make the experience feel cold or overwhelming. Medico aims to solve this problem by providing clear reminders while maintaining a friendly, supportive, and motivating approach.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>3. Target Users</h2>
+            <section>
+                <h2>3. Target Users</h2>
         <p>
             This application is designed to accompany users of different age groups in their daily lives by offering guidance and support.
         </p>
@@ -69,9 +65,12 @@
             The app aims to be accessible to users who may not be very comfortable with technology and therefore require a simpler and clearer user interface. Medico provides the necessary features in the least confusing way possible, prioritizing clarity and ease of use.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>4. User Research Methodology</h2>
+            <section>
+                <h2>4. User Research Methodology</h2>
         <p>
             In order to properly design the application, a user research survey was conducted to collect insights on how the application should be structured and which features would be most useful.
         </p>
@@ -89,9 +88,12 @@
             <li><strong>User Needs:</strong> Identifies difficulties in managing medications, frustrations with current health apps, desired features, and the importance of tone, simplicity, and personalization.</li>
         </ul>
 
+        </section>
+
         <hr>
 
-        <h2>4.2 Survey Results & Key Findings</h2>
+            <section>
+                <h2>4.2 Survey Results & Key Findings</h2>
         <p>
             Unfortunately, the survey did not receive a large number of responses, resulting in a limited sample size (the survey was shared on Instagram and Reddit). However, a few relevant trends were still observed.
         </p>
@@ -105,9 +107,12 @@
             This also highlights that users do not appreciate being overwhelmed with notifications. Excessive notifications often lose their meaning or get ignored altogether. A simple and direct notification, containing only the necessary information and delivered at the right time, is far more effective.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>5. User Personas</h2>
+            <section>
+                <h2>5. User Personas</h2>
         <p>
             Chronic health conditions vary greatly, and users therefore have diverse needs. Despite these differences, all users must be supported within a single application.
         </p>
@@ -119,9 +124,12 @@
             <li>Persona 2</li>
         </ul>
 
+        </section>
+
         <hr>
 
-        <h2>6. User Needs & Design Requirements</h2>
+            <section>
+                <h2>6. User Needs & Design Requirements</h2>
         <ul>
             <li>Provide clear medication reminders with notifications containing only relevant information</li>
             <li>Offer an easy and quick way for users to log their medication intake</li>
@@ -129,16 +137,22 @@
             <li>Ensure accessibility through readable fonts and a simple, intuitive interface</li>
         </ul>
 
+        </section>
+
         <hr>
 
-        <h2>7. User Journey Mapping</h2>
+            <section>
+                <h2>7. User Journey Mapping</h2>
         <p>
             To properly proceed with the design of the application, various use cases were identified. A user journey map was created to visualize how the user would interact with Medico throughout their daily routine.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>8. Sketches</h2>
+            <section>
+                <h2>8. Sketches</h2>
         <p>The design process began with simple sketches that outlined the overall structure and functionality of the app. These sketches included the following pages:</p>
         <ul>
             <li>Welcome page</li>
@@ -154,25 +168,34 @@
             Originally, the mascot was designed as a leaf; however, a pill was found to be more intuitive and directly related to the purpose of the application.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>9. Wireframes</h2>
+            <section>
+                <h2>9. Wireframes</h2>
         <p>
             Once satisfied with the overall concept, low-fidelity wireframes were created. These wireframes helped define the layout and features of each page while keeping the design simple before moving into the high-fidelity UI/UX design phase in Figma.
         </p>
         <img src="images/wireframes.png" alt="Wireframes">
 
+        </section>
+
         <hr>
 
-        <h2>10. Storyboard</h2>
+            <section>
+                <h2>10. Storyboard</h2>
         <p>
             A storyboard was created to illustrate how the application would be used in a real-life context. It captures one of the many possible scenarios in which Medico would support a user throughout their day.
         </p>
         <img src="images/storyboard.png" alt="Storyboard">
 
+        </section>
+
         <hr>
 
-        <h2>11. Design Phase</h2>
+            <section>
+                <h2>11. Design Phase</h2>
         <p>
             Designing an application involves multiple steps, one of which is finding visual inspiration.
         </p>
@@ -209,16 +232,22 @@
             The name Medico was chosen because it is short, catchy, and directly related to health, without sounding overly serious or intimidating.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>12. Prototype</h2>
+            <section>
+                <h2>12. Prototype</h2>
         <p>
             The final interactive prototype was created in Figma. It demonstrates the various interactions within the app and showcases its main features.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>13. Final Design</h2>
+            <section>
+                <h2>13. Final Design</h2>
         <p>
             The application opens with a welcome page where the mascot, Medico, greets the user and briefly explains the app’s purpose. From there, the user can either log in or complete a short onboarding survey to personalize their experience.
         </p>
@@ -243,14 +272,20 @@
             Finally, the Settings page allows users to manage personal information, notification preferences, and health-related settings.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>14. Usability Testing</h2>
+            <section>
+                <h2>14. Usability Testing</h2>
         <p>(To be completed)</p>
 
+        </section>
+
         <hr>
 
-        <h2>15. Reflection</h2>
+            <section>
+                <h2>15. Reflection</h2>
         <p>
             While Medico successfully addresses medication and appointment tracking, future iterations could explore caregiver integration and professional dashboards. Conducting surveys with healthcare professionals would provide valuable insight into their needs and expectations.
         </p>
@@ -258,14 +293,21 @@
             Accessibility remains a core priority. Future improvements include dark mode, light mode, high-contrast mode, colorblind options, adjustable font sizes, and full screen reader compatibility.
         </p>
 
+        </section>
+
         <hr>
 
-        <h2>16. Conclusion</h2>
-        <p>
-            This research allowed for the design of a health companion application that supports users managing chronic conditions in a fun, intuitive, and motivating manner. Medico uses a friendly mascot to deliver personalized reminders while avoiding unnecessary complexity or information overload.
-        </p>
-        <p>
-            By focusing on encouragement, simplicity, and personalization, Medico aims to support users in maintaining consistency and motivation in their daily health routines.
-        </p>
+            <section>
+                <h2>16. Conclusion</h2>
+                <p>
+                    This research allowed for the design of a health companion application that supports users managing chronic conditions in a fun, intuitive, and motivating manner. Medico uses a friendly mascot to deliver personalized reminders while avoiding unnecessary complexity or information overload.
+                </p>
+                <p>
+                    By focusing on encouragement, simplicity, and personalization, Medico aims to support users in maintaining consistency and motivation in their daily health routines.
+                </p>
+            </section>
+
+            <footer class="footer-note">Last updated: Feb 10, 2026</footer>
+        </main>
     </body>
 </html>
