Added prototype color palettes etc

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <main class="container">
             <header class="article-header">
-                <div class="header-meta">SOEN 357 – UI/UX Design</div>
+                <div class="header-meta">SOEN 357 – User Interface Design</div>
                 <h1>Medico – Chronic Health Companion App</h1>
-                <div class="byline">A concise case study outlining research, wireframes and final design.</div>
+                <div class="byline">Written by Hiba Talbi 40278717.</div>
             </header>
             <p><strong>SOEN 357 – UI/UX Design of a Health Companion App</strong></p>
 
@@ -77,6 +77,10 @@
         <p>
             An anonymous online survey lasting approximately 5–10 minutes was conducted using Google Forms. The survey targeted individuals living with chronic health conditions or those closely managing such conditions.
         </p>
+        <p>
+            <a href="https://forms.gle/4YT36XMRDRWoSY7MA" target="_blank" rel="noopener noreferrer">https://forms.gle/4YT36XMRDRWoSY7MA</a>
+        </p>
+        
 
         <hr>
 
@@ -100,7 +104,7 @@
         <p><strong>Key Findings:</strong></p>
         <ul>
             <li>Most respondents expressed the importance of having a personalized experience when using a health application. This directly supports Medico’s goal of personalization and the inclusion of a mascot to make the app feel more engaging and “alive.”</li>
-            <li>One notable suggestion from a respondent was to include a yearly progress graph showing improvements in health using real metrics. This idea was not initially planned but was later incorporated into the wireframe designs.</li>
+            <li>When asked "What would make a medication reminder app truly helpful for you?", one respondent replied: "If it shows a yearly graph (improved health) — real metrics to keep track of improvement." This suggestion was not initially planned but was later incorporated into the wireframe designs.</li>
             <li>Users expressed a preference for relevant and precise notifications, specifically indicating which medication to take at the requested time.</li>
         </ul>
         <p>
@@ -165,7 +169,14 @@
             <li>Messaging page</li>
         </ul>
         <p>
-            Originally, the mascot was designed as a leaf; however, a pill was found to be more intuitive and directly related to the purpose of the application.
+            Originally, the mascot was designed as a leaf. 
+        <img id="sketches1" src="images/sketches1.jpeg" alt="Sketches 1">
+        <p>
+            However, a pill was found to be more intuitive and directly related to the purpose of the application.
+        </p>
+        <img id="sketches2" src="images/sketches2.png" alt="Sketches 2">
+        <p>
+            The sketches were intentionally kept simple and rough to focus on the overall concept and structure of the app rather than on visual details. This approach allows for quick iterations and adjustments based on feedback before moving into more detailed designs.
         </p>
 
         </section>
@@ -207,29 +218,69 @@
 
         <h3>11.2 Color Palette</h3>
         <p>
-            Initially, an orange color palette was explored to create a warm and welcoming feeling. However, it quickly began to resemble a pet-related application. For this reason, a green color palette was chosen instead.
+            Initially, an orange color palette was explored to create a warm and welcoming feeling. However, it quickly began to resemble a pet-related application. 
         </p>
+        <img id="og-palette" src="images/original_palette.png" alt="Original Palette">
+        <div class="color-palette">
+            <div class="swatch dark" style="background:#673902;" title="#673902"><span class="swatch-label">#673902</span></div>
+            <div class="swatch" style="background:#F28502;" title="#F28502"><span class="swatch-label">#F28502</span></div>
+            <div class="swatch" style="background:#FFF4E7;" title="#FFF4E7"><span class="swatch-label dark-text">#FFF4E7</span></div>
+            <div class="swatch" style="background:#FFFFFF;" title="#FFFFFF"><span class="swatch-label dark-text">#FFFFFF</span></div>
+            <div class="swatch dark" style="background:#444444;" title="#444444"><span class="swatch-label">#444444</span></div>
+        </div>
+        <p>
+           For this reason, a green color palette was chosen instead. 
+        </p>
+
         <p>
             Green is commonly associated with health, balance, and calmness. It helps reinforce the app’s purpose while making users feel at ease.
         </p>
+
+        <div class="color-palette">
+            <div class="swatch" style="background:#96DE80;" title="#96DE80"><span class="swatch-label">#96DE80</span></div>
+            <div class="swatch" style="background:#D7EBD2;" title="#D7EBD2"><span class="swatch-label dark-text">#D7EBD2</span></div>
+            <div class="swatch" style="background:#FFFFFC;" title="#FFFFFC"><span class="swatch-label dark-text">#FFFFFC</span></div>
+            <div class="swatch" style="background:#EEEDD9;" title="#EEEDD9"><span class="swatch-label dark-text">#EEEDD9</span></div>
+            <div class="swatch dark" style="background:#3E3E3E;" title="#3E3E3E"><span class="swatch-label">#3E3E3E</span></div>
+            <div class="swatch dark" style="background:#262626;" title="#262626"><span class="swatch-label">#262626</span></div>
+        </div>
 
         <h3>11.3 Typography</h3>
         <p>
             Medico is meant to be intuitive, clear, and visually consistent. For this reason, a simple and readable font was chosen: Roboto. Roboto is commonly used on Android devices, is highly legible, and does not distract from the content.
         </p>
-        <p>(Add image of font here)</p>
+        <div class="typography-sample">
+            <img src="images/roboto_sample.svg" alt="Roboto sample">
+        </div>
 
         <h3>11.4 Icons and Illustrations</h3>
         <p>
-            Icons were selected from Flaticon, ensuring that a consistent icon set was used throughout the application. Icons with thicker lines were chosen to match the visual style of the mascot.
+            Icons were selected from Flaticon (<a href="https://www.flaticon.com " target="_blank" rel="noopener noreferrer">https://www.flaticon.com</a> ), 
+            and used under their free license with attribution. I ensured that a consistent icon set was used throughout the application. Icons with thicker lines were chosen to match the visual style of the mascot that has thick bold lines.
+        </p>
+
+        <div class="icons-grid">
+            <div class="icon-item"><img src="images/icons/home-black.png" alt="Home"></div>
+            <div class="icon-item"><img src="images/icons/calendar-black.png" alt="Calendar"></div>
+            <div class="icon-item"><img src="images/icons/capsules-black.png" alt="Capsules"></div>
+            <div class="icon-item"><img src="images/icons/comment-black.png" alt="Comment"></div>
+            <div class="icon-item"><img src="images/icons/settings-black.png" alt="Settings"></div>
+            <div class="icon-item"><img src="images/icons/checkmark.png" alt="Checkmark"></div>
+            <div class="icon-item"><img src="images/icons/pencil-green.png" alt="Pencil"></div>
+            <div class="icon-item"><img src="images/icons/search-dark green.png" alt="Search"></div>
+        </div>
+
+        <p>
+            The mascot was hand-drawn by myself using Resprite, a pixel art software. The design was kept minimalistic to avoid overwhelming users and lose the meaning it's supposed to convey which is friendliness and warmth.
         </p>
 
         <h3>11.5 Naming & Logo</h3>
         <p>
             The name of the app and the mascot were intentionally kept the same to reinforce brand recognition. The logo is simply the face of the mascot.
         </p>
+        <img id="logo" src="images/logo.png" alt="Logo">
         <p>
-            The name Medico was chosen because it is short, catchy, and directly related to health, without sounding overly serious or intimidating.
+            The name <strong>Medico</strong> was chosen because it is short, catchy, and directly related to health, without sounding overly serious or intimidating.
         </p>
 
         </section>
@@ -241,6 +292,10 @@
         <p>
             The final interactive prototype was created in Figma. It demonstrates the various interactions within the app and showcases its main features.
         </p>
+        <p>
+            <img id="prototype-demo" src="videos/prototype-demo.gif" alt="Prototype demo">
+        </p>
+        <a href="https://www.figma.com/proto/d7uMEbJ9bt8JFxKxfDdplm/Medico-ux-case-study?node-id=37-129&p=f&t=n6VxRd0Cf8cVx3oY-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=37%3A129&show-proto-sidebar=1" target="_blank" rel="noopener noreferrer">View the interactive prototype</a>
 
         </section>
 
