--- a/index.html
+++ b/index.html
@@ -121,34 +121,34 @@
             Chronic health conditions vary greatly, and users therefore have diverse needs. Despite these differences, all users must be supported within a single application.
         </p>
         <p>
-            Two personas were created based on responses collected from the survey. Creating these personas helps keep user needs in mind throughout the design process and ensures that design decisions remain user-centered.
+            Two personas were created based on responses collected from the survey. 
+            Creating these personas helps keep user needs in mind throughout the design process and ensures that design decisions remain user-centered.
         </p>
-        <ul>
-            <li>Persona 1</li>
-            <li>Persona 2</li>
-        </ul>
-
-        </section>
-
-        <hr>
-
-            <section>
-                <h2>6. User Needs & Design Requirements</h2>
+        <p>
+            The user needs and requirements captured by the personas are the following:
+        </p>
         <ul>
             <li>Provide clear medication reminders with notifications containing only relevant information</li>
             <li>Offer an easy and quick way for users to log their medication intake</li>
             <li>Maintain a friendly and encouraging tone without compromising the seriousness of the app’s purpose</li>
             <li>Ensure accessibility through readable fonts and a simple, intuitive interface</li>
         </ul>
-
-        </section>
+        <p>
+            <strong>Persona 1</strong> represents a younger user who is tech-savvy but struggles with consistency in medication intake due to a busy lifestyle. 
+        </p>
+        <img id="persona1" src="images/persona1.png" alt="Persona 1">
+        <p>
+            <strong>Persona 2</strong> represents an older adult who has a heavy schedule and requires a straightforward and easy-to-navigate application.
+        </p>
+        <img id="persona2" src="images/persona2.png" alt="Persona 2">
 
         <hr>
 
             <section>
-                <h2>7. User Journey Mapping</h2>
+                <h2>6. User Journey Mapping</h2>
         <p>
-            To properly proceed with the design of the application, various use cases were identified. A user journey map was created to visualize how the user would interact with Medico throughout their daily routine.
+            To properly proceed with the design of the application, various use cases were identified.  
+            Two User journey Maps were created to visualize how the personas would interact with Medico throughout their daily routines.
         </p>
 
         </section>
@@ -156,7 +156,7 @@
         <hr>
 
             <section>
-                <h2>8. Sketches</h2>
+                <h2>7. Sketches</h2>
         <p>The design process began with simple sketches that outlined the overall structure and functionality of the app. These sketches included the following pages:</p>
         <ul>
             <li>Welcome page</li>
@@ -184,7 +184,7 @@
         <hr>
 
             <section>
-                <h2>9. Wireframes</h2>
+                <h2>8. Wireframes</h2>
         <p>
             Once satisfied with the overall concept, low-fidelity wireframes were created. These wireframes helped define the layout and features of each page while keeping the design simple before moving into the high-fidelity UI/UX design phase in Figma.
         </p>
@@ -195,28 +195,28 @@
         <hr>
 
             <section>
-                <h2>10. Storyboard</h2>
+                <h2>9. Storyboard</h2>
         <p>
             A storyboard was created to illustrate how the application would be used in a real-life context. It captures one of the many possible scenarios in which Medico would support a user throughout their day.
         </p>
-        <img src="images/storyboard.png" alt="Storyboard">
+        <img id="storyboard" src="images/storyboard.png" alt="Storyboard">
 
         </section>
 
         <hr>
 
             <section>
-                <h2>11. Design Phase</h2>
+                <h2>10. Design Phase</h2>
         <p>
             Designing an application involves multiple steps, one of which is finding visual inspiration.
         </p>
 
-        <h3>11.1 The Mascot</h3>
+        <h3>10.1 The Mascot</h3>
         <p>
             The inspiration behind the mascot comes from personal experience with applications such as Duolingo. Duolingo’s mascot plays a major role in making the app engaging and memorable. While Medico does not aim to replicate Duolingo’s frequent notification style, the idea of a friendly mascot that encourages users was a strong source of inspiration.
         </p>
 
-        <h3>11.2 Color Palette</h3>
+        <h3>10.2 Color Palette</h3>
         <p>
             Initially, an orange color palette was explored to create a warm and welcoming feeling. However, it quickly began to resemble a pet-related application. 
         </p>
@@ -245,7 +245,7 @@
             <div class="swatch dark" style="background:#262626;" title="#262626"><span class="swatch-label">#262626</span></div>
         </div>
 
-        <h3>11.3 Typography</h3>
+        <h3>10.3 Typography</h3>
         <p>
             Medico is meant to be intuitive, clear, and visually consistent. For this reason, a simple and readable font was chosen: Roboto. Roboto is commonly used on Android devices, is highly legible, and does not distract from the content.
         </p>
@@ -253,7 +253,7 @@
             <img src="images/roboto_sample.svg" alt="Roboto sample">
         </div>
 
-        <h3>11.4 Icons and Illustrations</h3>
+        <h3>10.4 Icons and Illustrations</h3>
         <p>
             Icons were selected from Flaticon (<a href="https://www.flaticon.com " target="_blank" rel="noopener noreferrer">https://www.flaticon.com</a> ), 
             and used under their free license with attribution. I ensured that a consistent icon set was used throughout the application. Icons with thicker lines were chosen to match the visual style of the mascot that has thick bold lines.
@@ -274,7 +274,7 @@
             The mascot was hand-drawn by myself using Resprite, a pixel art software. The design was kept minimalistic to avoid overwhelming users and lose the meaning it's supposed to convey which is friendliness and warmth.
         </p>
 
-        <h3>11.5 Naming & Logo</h3>
+        <h3>10.5 Naming & Logo</h3>
         <p>
             The name of the app and the mascot were intentionally kept the same to reinforce brand recognition. The logo is simply the face of the mascot.
         </p>
@@ -288,51 +288,62 @@
         <hr>
 
             <section>
-                <h2>12. Prototype</h2>
+                <h2>11. Prototype</h2>
         <p>
             The final interactive prototype was created in Figma. It demonstrates the various interactions within the app and showcases its main features.
         </p>
+        <img id="prototype-demo" src="videos/prototype-demo.gif" alt="Prototype demo">
         <p>
-            <img id="prototype-demo" src="videos/prototype-demo.gif" alt="Prototype demo">
+            View the interactive prototype on Figma:
+            <a href="https://www.figma.com/proto/d7uMEbJ9bt8JFxKxfDdplm/Medico-ux-case-study?node-id=37-129&p=f&t=n6VxRd0Cf8cVx3oY-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=37%3A129&show-proto-sidebar=1" target="_blank" rel="noopener noreferrer">Click here</a>
         </p>
-        <a href="https://www.figma.com/proto/d7uMEbJ9bt8JFxKxfDdplm/Medico-ux-case-study?node-id=37-129&p=f&t=n6VxRd0Cf8cVx3oY-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=37%3A129&show-proto-sidebar=1" target="_blank" rel="noopener noreferrer">View the interactive prototype</a>
+        
 
         </section>
 
         <hr>
 
             <section>
-                <h2>13. Final Design</h2>
+                <h2>12. Final Design</h2>
         <p>
-            The application opens with a welcome page where the mascot, Medico, greets the user and briefly explains the app’s purpose. From there, the user can either log in or complete a short onboarding survey to personalize their experience.
+            The application opens with a welcome page where the mascot, Medico, greets the user and briefly explains the app’s purpose.
         </p>
+        <div class="side-by-side">
+            <img class="prototype-pages" src="images/final-design/welcome-page.png" alt="Welcome page">
+            <img class="prototype-pages" src="images/final-design/login.png" alt="Login page">
+        </div>
+        
         <p>
-            Once logged in, the user arrives on the home page, which presents a daily dashboard showing:
+            Once logged in, the user arrives on the home page, which presents a daily dashboard showing the scheduled medications for the day and an encouraging messages from Medico. The home page serves as a quick overview of the user’s daily health routine and provides motivation to stay on track.
         </p>
-        <ul>
-            <li>Scheduled medications for the day</li>
-            <li>Encouraging messages from Medico</li>
-            <li>Progress indicators</li>
-        </ul>
+        <img class="prototype-pages" src="images/final-design/home-page.png" alt="Home page">
+
         <p>
             The Messages page allows users to communicate with healthcare professionals for guidance or support.
         </p>
+        <div class="side-by-side">
+            <img class="prototype-pages" src="images/final-design/messages.png" alt="Messages page">
+            <img class="prototype-pages" src="images/final-design/chats.png" alt="Chats">
+        </div>
         <p>
             The Appointments page displays upcoming appointments, allows users to set reminders, add events to their calendar, and create new appointments.
         </p>
+        <img class="prototype-pages" src="images/final-design/appointments.png" alt="Appointments page"> 
         <p>
             The Medications page lists all current medications along with dosage instructions, scheduled times, and optional notes. A progress dashboard at the bottom displays monthly or yearly health metrics.
         </p>
+        <img class="prototype-pages" src="images/final-design/medication.png" alt="Medications page"> 
         <p>
             Finally, the Settings page allows users to manage personal information, notification preferences, and health-related settings.
         </p>
+        <img class="prototype-pages" src="images/final-design/settings.png" alt="Settings page">
 
         </section>
 
         <hr>
 
             <section>
-                <h2>14. Usability Testing</h2>
+                <h2>13. Usability Testing</h2>
         <p>(To be completed)</p>
 
         </section>
@@ -340,7 +351,7 @@
         <hr>
 
             <section>
-                <h2>15. Reflection</h2>
+                <h2>14. Reflection</h2>
         <p>
             While Medico successfully addresses medication and appointment tracking, future iterations could explore caregiver integration and professional dashboards. Conducting surveys with healthcare professionals would provide valuable insight into their needs and expectations.
         </p>
@@ -353,7 +364,7 @@
         <hr>
 
             <section>
-                <h2>16. Conclusion</h2>
+                <h2>15. Conclusion</h2>
                 <p>
                     This research allowed for the design of a health companion application that supports users managing chronic conditions in a fun, intuitive, and motivating manner. Medico uses a friendly mascot to deliver personalized reminders while avoiding unnecessary complexity or information overload.
                 </p>
